interpreter-janeklang/tests/good/06_returnInIf_2.janek
int fun(int n) {
    if(true){
        return 0;
    }
}

int main() {
    int result = fun(0);
    print(result);
    return 0;
}
