interpreter-janeklang/tests/bad/11_wrongValueType_1.janek
int skibidi(){
    return 2137;
}

int main(){
    string s = "asd";
    s = skibidi();
    return 0;
}